--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="public/models/planyourcare.png" />
+    <link rel="icon" type="image/png" href="public/models/pyclogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plan Your Care</title>
   </head>
